Bug 529824 - tokenization bug breaks global search query strings ending in non-ASCII characters.  v1 do not have an off-by-one bug for utf8, do test more. r+sr=bienvenu